<resources>
    <string name="app_name">UTSPraktik-IF6-10119233-DendenTriana</string>
    <string name="info">INFO</string>
    <string name="form_pengisian_data">Form Pengisian Data</string>
    <string name="rapid_antigen">Rapid Antigen</string>
    <string name="PCR">PCR</string>
    <string name="jenis_tes">Jenis Tes</string>
    <string name="harus_diisi">• Harus Diisi</string>
    <string name="tgl_conf">Tanggal Terkonfirmasi</string>
    <string name="nama">Nama</string>
    <string name="nik">NIK</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="masukkaan_nik">Masukkaan NIK</string>
    <string name="masukan_nama">Masukkan nama</string>
    <string name="name">Nama</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki - laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="orangtua">Orangtua</string>
    <string name="couple">Suami/Istri</string>
    <string name="anak">Anak</string>
    <string name="kerabat">Kerabat Lainnya</string>
    <string name="setuju">Dengan ini saya menyetujui bahwa data yang saya isikan adalah benar</string>
    <string name="hubungan">Hubungan Dengan Anda</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="cek_kembali_isian_data">Cek Kembali Isian Data</string>
    <string name="cek_hasil_tes">Cek Hasil Tes</string>
    <string name="ubah">Ubah</string>
</resources>