<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CekActivity"
    android:padding="8dp"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cek_kembali_isian_data"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_tes"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_tes"
        android:id="@+id/cek_tes"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tgl_conf"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_tes"
        android:id="@+id/cek_konfirmasi"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nik"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        />
    <TextView
        android:id="@+id/cek_nik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_tes"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_tes"
        android:id="@+id/cek_nama"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        /><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tanggal_lahir"
    style="@style/TextAppearance.MaterialComponents.Headline6"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_tes"
        android:id="@+id/cek_lahir"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_kelamin"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_tes"
        android:id="@+id/cek_kelamin"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/hubungan"
    style="@style/TextAppearance.MaterialComponents.Headline6"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_tes"
        android:id="@+id/cek_hub"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cek_hasil_tes"
        android:backgroundTint="@color/green"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ubah"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/grey_bg"
        android:id="@+id/cek_ubah"
        />

</LinearLayout>