<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="8dp"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/main_contraint"
        >
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_pengisian_data"
            android:id="@+id/main_form"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            />
        <ImageView
            android:id="@+id/main_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/info"
            android:src="@drawable/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_form" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_tes"
            android:id="@+id/main_jenis"
            app:layout_constraintStart_toStartOf="@id/main_form"
            app:layout_constraintTop_toBottomOf="@id/main_info"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:fontFamily="@font/lato_bold"
            />
        <TextView
            app:layout_constraintStart_toEndOf="@id/main_jenis"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@id/main_jenis"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/main_jenis"
            android:id="@+id/main_harus"
            android:text="@string/harus_diisi"
            android:layout_marginStart="2dp"
            android:textColor="@color/green"
            />
        <RadioGroup
            app:layout_constraintTop_toBottomOf="@id/main_jenis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_radio_group"
            >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rapid_antigen"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/PCR"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tgl_conf"
            android:id="@+id/main_tgl"
            app:layout_constraintStart_toStartOf="@id/main_form"
            app:layout_constraintTop_toBottomOf="@id/main_radio_group"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:fontFamily="@font/lato_bold"
            />
        <TextView
            app:layout_constraintStart_toEndOf="@id/main_tgl"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@id/main_tgl"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/main_tgl"
            android:id="@+id/main_harus_2"
            android:text="@string/harus_diisi"
            android:layout_marginStart="2dp"
            android:textColor="@color/green"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_tlg_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_baseline_date_range_24"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/pilih_tanggal"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/main_tgl"
            />
        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_nik"
            android:text="@string/nik"
            app:layout_constraintTop_toBottomOf="@id/main_tlg_input"
            app:layout_constraintStart_toStartOf="@id/main_info"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_nik_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkaan_nik"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@id/main_info"
            app:layout_constraintTop_toBottomOf="@id/main_nik" />
        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_name"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@id/main_nik_input"
            app:layout_constraintStart_toStartOf="@id/main_info"
            />
        <TextView
            app:layout_constraintStart_toEndOf="@id/main_name"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@id/main_name"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/main_name"
            android:id="@+id/main_harus_3"
            android:text="@string/harus_diisi"
            android:layout_marginStart="2dp"
            android:textColor="@color/green"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_name_input"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_height="wrap_content"
            android:hint="@string/masukan_nama"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@id/main_info"
            app:layout_constraintTop_toBottomOf="@id/main_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_tgl_lahir"
            app:layout_constraintTop_toBottomOf="@id/main_name_input"
            app:layout_constraintStart_toStartOf="@id/main_info"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/tanggal_lahir"
            />
        <TextView
            app:layout_constraintStart_toEndOf="@id/main_tgl_lahir"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@id/main_tgl_lahir"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/main_tgl_lahir"
            android:id="@+id/main_harus_4"
            android:text="@string/harus_diisi"
            android:layout_marginStart="2dp"
            android:textColor="@color/green"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_tlg_lahir_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_baseline_date_range_24"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/pilih_tanggal"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/main_tgl_lahir"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            android:id="@+id/main_kelamin"
            app:layout_constraintTop_toBottomOf="@id/main_tlg_lahir_input"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toStartOf="@id/main_info"
            />
        <TextView
            app:layout_constraintStart_toEndOf="@id/main_kelamin"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@id/main_kelamin"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/main_kelamin"
            android:id="@+id/main_harus_5"
            android:text="@string/harus_diisi"
            android:layout_marginStart="2dp"
            android:textColor="@color/green"
            />
        <RadioGroup
            app:layout_constraintTop_toBottomOf="@id/main_kelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_radio_kelamin"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/laki_laki"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perempuan"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hubungan"
            android:id="@+id/main_hub"
            app:layout_constraintTop_toBottomOf="@id/main_radio_kelamin"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toStartOf="@id/main_info"
            />
        <TextView
            app:layout_constraintStart_toEndOf="@id/main_hub"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@id/main_hub"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/main_hub"
            android:id="@+id/main_harus_6"
            android:text="@string/harus_diisi"
            android:layout_marginStart="2dp"
            android:textColor="@color/green"
            />
        <RadioGroup
            app:layout_constraintTop_toBottomOf="@id/main_hub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_radio_hub"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/orangtua"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/couple"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/anak"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kerabat"
                />
        </RadioGroup>
        <CheckBox
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setuju"
            android:id="@+id/main_check_setuju"
            app:layout_constraintTop_toBottomOf="@id/main_radio_hub"
            app:layout_constraintStart_toStartOf="@id/main_info"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selanjutnya"
            android:id="@+id/main_button"
            app:layout_constraintTop_toBottomOf="@id/main_check_setuju"
            android:backgroundTint="@color/green"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>